recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:7: error: not found: value dst
    move(dst, other)
         ^SplitHanoi1:22: error: not found: value dst
    splitHanoi(height-2, other, src, dst, dst2)
                                     ^SplitHanoi1:26: error: not found: value mode
    mode(src, dst2)
    ^